# python_training

./: .gitignore  pyproject.toml
duckdb/: training.py  training1.py
telethon/: Quick-Start.py  Updates.py  asyncIO_await_async.py  download.py  download_file.py  practice.py  practice_2.py
telethon_telegram/: Updates.py  asyncIO_await_async.py  practice.py  practice_2.py  practice_3.py  practice_4.py  practice_5.py  practice_6.py
